--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,17 +11,18 @@
 }
 
 .logo {
-    color: rgb(78, 103, 136);
     font-weight: 700;
-    line-height: 35px;
-    text-transform: uppercase;
+    font-size: 1.5rem;
     letter-spacing: 0.15px;
-    border-radius: 5px;
-    padding: 0 10px;
     text-decoration: none;
+    color: #1565c0;
 }
 
 .buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
     button {
         margin-left: 10px;
     }
@@ -29,4 +30,22 @@
     a {
         text-decoration: none;
     }
+}
+
+.userInfo {
+    display: flex;
+    flex-direction: row;
+}
+
+.avatar {
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.userName {
+    font-weight: 500;
+    font-size: 20px;
 }
