--- a/src/components/Announcement/Announcement.module.scss
+++ b/src/components/Announcement/Announcement.module.scss
@@ -1,16 +1,18 @@
-$blue: #4361ee;
+$gray: #b4b7c5;
 
 .root {
+    max-width: 925px;
+    margin: 0 auto;
     background-color: #fff;
     border: 1px solid #dedede;
     border-radius: 6px;
     overflow: hidden;
     margin-bottom: 15px;
     position: relative;
+    transition: box-shadow 0.2s;
 
     &:hover {
-        border: 1px solid $blue;
-        box-shadow: 0 0 0 1px $blue;
+        box-shadow: 0 0 15px $gray;
 
         .editButtons {
             opacity: 1;
@@ -63,7 +65,7 @@ $blue: #4361ee;
         color: #000;
 
         &:hover {
-            color: $blue;
+            color: $gray;
         }
     }
 
@@ -73,25 +75,26 @@ $blue: #4361ee;
     }
 }
 
-.tags {
-    list-style: none;
-    padding: 0;
-    margin: 5px 0 0 0;
+.info {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    
+    .phone_number, .adress {
+        display: inline-flex;
+        align-items: center;
+        margin-left: 25px;
 
-    li {
-        display: inline-block;
-        font-size: 14px;
-        margin-right: 15px;
-        opacity: 0.5;
-
-        &:hover {
-            opacity: 1;
+        span {
+            font-size: 1rem;
+            font-weight: 700;
         }
 
-        a {
-            text-decoration: none;
-            color: #000;
-        }
+        svg {
+            font-size: 2.2rem;
+            margin-right: 15px;
+            opacity: 0.4;
+        } 
     }
 }
 
